common/istio-1-17-oauth2-proxy/kubeflow-istio-resources/base/requestauthentication.dex-jwt.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: dex-jwt
  namespace: istio-system
spec:
  jwtRules:
    - forwardOriginalToken: true
      issuer: $(dex_issuer)
      outputClaimToHeaders:
        - header: kubeflow-userid
          claim: email
        - header: x-auth-request-email
          claim: email
        - header: x-auth-request-user
          claim: email
