common/istio-1-17-oauth2-proxy/kubeflow-istio-resources/base/requestauthentication.kubernetes-jwt.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: kubernetes-jwt
  namespace: istio-system
spec:
  jwtRules:
    - forwardOriginalToken: true
      issuer: https://oidc.eks.eu-central-1.amazonaws.com/id/8E574425478FFFA048D9BAA12C3ABBCD
      outputClaimToHeaders:
        - header: kubeflow-userid
          claim: sub
        - header: x-auth-request-email
          claim: sub
        - header: x-auth-request-user
          claim: sub
